--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "cesium": "^1.132.0",
+    "@turf/turf": "^7.2.0",
+    "cesium": "1.84",
     "vue": "^3.5.17"
   },
   "devDependencies": {
